Fixes for building.